@@ -1,4 +1,5 @@
 0.02
+ - Update examples/ directory.
 
 0.01 2016-04-20T16:40:33+02:00
  - First version.
